--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wifiinfo" />
+        app:layout_constraintTop_toBottomOf="@+id/wifiinfo"
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/imgRSSILevel"
@@ -52,6 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRefresh" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRefresh"
+        tools:ignore="HardcodedText" />
 
 </android.support.constraint.ConstraintLayout>
