--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,24 +38,37 @@
         android:layout_width="118dp"
         android:layout_height="38dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btnRefresh"
-        android:contentDescription="TODO"
         app:layout_constraintTop_toBottomOf="@+id/wifiinfo"
         tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/imgMAP"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="293dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="45dp"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRefresh"
+        app:layout_constraintTop_toBottomOf="@+id/btnExportar"
         tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btnExportar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRefresh" />
 
 </android.support.constraint.ConstraintLayout>
