implementado classe MonitorIntentService com o código e metodos associados para coleta evento onclick() do botao de start/rop de coleta alterado para disparar a tarefa de coleta. implementado subclasse receiver na MainActivity para receber os resultados das tarefas e setar o txtwifi para os resulytados criado um objeto em mainActivity dessa subclasse e outro objeto receiver. alterado o manifest para o novo servico MonitorIntentService TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile).

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:text="@string/par_metros"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +64,7 @@
         android:layout_marginTop="40dp"
         android:text="@string/frequ_ncia_de_coleta_ms"
         app:layout_constraintEnd_toStartOf="@+id/inputFreq"
-        app:layout_constraintHorizontal_bias="0.677"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtParametro" />
@@ -72,8 +73,8 @@
         android:id="@+id/inputFreq"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="88dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="84dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,10 +85,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toEndOf="@+id/inputFreq"
         app:layout_constraintTop_toBottomOf="@+id/txtParametro"
         app:srcCompat="@drawable/ic_add_black_24dp" />
