corrigido problema com alarmManager e compatibilidade com versoes anteriores do android. criado um metodo para iniciar o alarmmanager com as configuracoes adequadas. corrigido solicitacoes de permissoes. as permissoes que devem ser reuqisitadas formam um vetor e sao apresentadas em sequencia, uma por vez, ao usuario. aquelas que sao negadas formam um segundo vetor para posterior pedido. testado no android 8 e 7. app ainda precisa ficar em primeiro plano para executar coletar corretamente. TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile).

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,4 +93,31 @@
         app:layout_constraintTop_toBottomOf="@+id/txtParametro"
         app:srcCompat="@drawable/ic_add_black_24dp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="8dp"
+        android:text="Monitor:"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtFreqColeta" />
+
+    <TextView
+        android:id="@+id/txtColetas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:text="Número de Coletas: 0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </android.support.constraint.ConstraintLayout>
