--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -59,7 +59,7 @@
     <TextView
         android:id="@+id/txtFreqColeta"
         android:layout_width="wrap_content"
-        android:layout_height="16dp"
+        android:layout_height="25dp"
         android:layout_marginTop="40dp"
         android:text="@string/frequ_ncia_de_coleta_ms"
         app:layout_constraintEnd_toStartOf="@+id/inputFreq"
@@ -99,7 +99,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="8dp"
-        android:text="Monitor:"
+        android:text="@string/monitor"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
@@ -113,10 +113,23 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:text="Número de Coletas: 0"
+        android:text="@string/n_mero_de_coletas_wifi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/txtColetasMobile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/n_mero_de_coletas_0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtColetas" />
 
 </android.support.constraint.ConstraintLayout>
