implementado metodo para controlar powermanager do telefone implementado servico WifiIntentService de varredura wifi para coletar redes ao alcance do telefone em substituicao do antigo mecanismo de coleta codificado em MonitorIntentService modificada estrutura da tabela wifi para comportar os campos timestamp, SSID, BSSID, capabilities, level, frequencia, latitude e longitude. varredura wifi em paralelo com coleta mobile remocao de arquivos nao utilizados no projeto. app ainda precisa ficar em primeiro plano para executar coletar corretamente no android 8. nas versoes anteriores funciona em background. TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile).

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,13 +112,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/n_mero_de_coletas_wifi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPeriodoColeta" />
 
     <TextView
         android:id="@+id/txtColetasMobile"
@@ -132,5 +132,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtColetas" />
+
+    <TextView
+        android:id="@+id/txtPeriodoColeta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/per_odo_de_coleta_ms"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </android.support.constraint.ConstraintLayout>
